examples/overseerr/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
spec:
  tls:
    - hosts:
        - your.domain.tld
      secretName: your-tls-cert-secret
  rules:
    - host: your.domain.tld
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 80
